<resources>
    <string name="app_name">HardCoding</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Login</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_user_not_found">User or password incorrect, please try again.</string>
    <string name="error_server">Internal server error, please try again later</string>
    <string name="login_welcome">Welcome to HardCoding</string>
    <string name="username">Username</string>
    <string name="action_send_registration">Send</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_password">Confirm password</string>
    <string name="error_invalid_email">Please enter a valid email</string>
    <string name="error_pass_short">Password must have 4 characters at least</string>
    <string name="error_pass_empty">Password cannot be empty</string>
    <string name="error_username_short">Username must have 3 characters at least</string>
    <string name="error_pass_must_match">Password and confirmation must match</string>
    <string name="tokens_left">Tokens left:</string>
    <string name="buy">Comprar</string>
    <string name="tokens_sufix">%d tokens</string>
    <string name="title_buy_confirmation">Buy this lesson?</string>
    <string name="message_buy_confirmation">Are you sure you want to buy this lesson?</string>
    <string name="go_to_lesson">Go</string>
    <string name="error_no_tokens">Sorry, you have not enough tokens.</string>
    <string name="action_log_out">Log out</string>
</resources>
